--- a/web/index.html
+++ b/web/index.html
@@ -33,10 +33,34 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+
+<script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-storage.js"></script>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
-  <script>
+  <script type="module">
+
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.8.0/firebase-app.js";
+
+
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyCnshMj47HBy0u7_LuS56pl9HbyyV8u6m8",
+    authDomain: "water-monitory-jjtronic.firebaseapp.com",
+    databaseURL: "https://water-monitory-jjtronic-default-rtdb.firebaseio.com",
+    projectId: "water-monitory-jjtronic",
+    storageBucket: "water-monitory-jjtronic.appspot.com",
+    messagingSenderId: "312993905854",
+    appId: "1:312993905854:web:46ec979e5a8d4cbf56f2ef"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+</script>
+<script>
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
     function loadMainDartJs() {
@@ -85,7 +109,7 @@
           });
 
         // If service worker doesn't succeed in a reasonable amount of time,
-        // fallback to plain <script> tag.
+        // fallback to plaint <script> tag.
         setTimeout(() => {
           if (!scriptLoaded) {
             console.warn(
@@ -100,5 +124,6 @@
       loadMainDartJs();
     }
   </script>
+
 </body>
 </html>
