--- a/web/index.html
+++ b/web/index.html
@@ -34,8 +34,8 @@
 </head>
 <body>
 
-<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-database.js"></script>
+<!--<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>-->
+<!--<script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-database.js"></script>-->
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
